# Grin-fairy

./: .gitignore  README.md  electron-builder.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
prototype/: 퇴근요정 프로토타입.html
prototype/scripts/: app.jsx  sprites.jsx  widget.jsx
scripts/: gen-icon.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/main/: index.ts  store.ts
src/preload/: index.ts
src/renderer/: App.tsx  api.ts  app.css  index.html  settings.tsx  sprites.tsx  types.ts  widget.tsx
